    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:showIn="@layout/activity_celula"
    tools:context=".CelulaActivityFragment">

    <EditText
        android:id="@+id/numero"
        android:inputType="number"
        android:digits="0123456789"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numero_celula"/>

    <EditText
        android:id="@+id/nome"
        android:layout_below="@id/numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"/>
    <Button
        android:id="@+id/dataAbertura"
        android:layout_below="@id/nome"
        android:text="@string/seleciona_data_abertura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

        <EditText
            android:id="@+id/endereco"
            android:layout_below="@+id/dataAbertura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/endereco" />
        <Spinner
            android:id="@+id/diaReuniao"
            android:layout_below="@+id/endereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/horaReuniao"
            android:layout_below="@+id/diaReuniao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="0123456789"
            />

        <EditText
            android:id="@+id/numeroCelulaMae"
            android:layout_below="@+id/horaReuniao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="0123456789"
            />

        <Spinner
            android:id="@+id/tipoCelula"
            android:layout_below="@+id/numeroCelulaMae"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/dataUltimaMultiplicacao"
            android:layout_below="@id/tipoCelula"
            android:text="@string/seleciona_data_ultima_multiplicacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
        android:id="@+id/salvar"
        android:layout_below="@id/dataUltimaMultiplicacao"
        android:text="@string/salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>